agregue la lista de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
                 ICONOS
             </article>
         </section>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
