Se termino el encabezado

--- a/index.html
+++ b/index.html
@@ -4,33 +4,167 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escuela</title>
+    <link rel="stylesheet" href="miEstilo.css">
 </head>
-<body>
+<body>    
     <header>
-        <section>
-            <article>
-                <input type="text">
+        <section class="encabezado">
+            <article class="encabezado-input">
+                <div>
+                    <span class="encabezado-lupita"></span>
+                    <input type="text" placeholder="Buscar...">
+                </div>
             </article>
-            <article>
-                LOGO
+            <article class="encabezado-logo">
+                <span></span>
+                <div>
+                    <h2>Cervantes</h2>
+                    <h3>Secundaria</h3>
+                </div>
             </article>
-            <article>
-                ICONOS
+            <article class="encabezado-iconos">
+                <a href="" class="icono iconos-perfil"></a>
+                <a href="" class="iconos-boton">Entrar</a>
+                <a href="" class="icono iconos-face"></a>
+                <a href="" class="icono iconos-twitter"></a>
+                <a href="" class="icono iconos-insta"></a>
+                <a href="" class="icono iconos-youtube"></a>
             </article>
         </section>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Inicio</li>
+                <li>Acerca de</li>
+                <li>Academia</li>
+                <li>Noticias</li>
+                <li>Eventos</li>
+                <li>Alumnos</li>
+                <li>Padres</li>
+                <li>Admisiones</li>
+                <li>Contacto</li>
             </ul>
         </nav>
     </header>
+    <!-- <main>
+        <section>
+            <div>
+                <h1>Vuelta a clases</h1>
+                <h2>Bienvenidos todos los estudiantes</h2>
+                <button type="button">Descubre la escuela</button>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>MEDIDAS SANITARIAS VIGENTES</h2>
+                <p>Hacemos lo posible para garantizar la salud, la seguridad y el bienestar de alumnos y empleados. Información adicional aquí</p>
+                <button type="button">Medidas sanitarias</button>
+            </div>
+            <div>
+                <article>[[[FOTO*]]]</article>
+                <article>
+                    <h2>Vida estudiantil</h2>
+                    <p>Párrafo. Haz clic aquí para agregar tu propio texto y editar. Es fácil. Haz clic en "Editar texto" o doble clic aquí para agregar tu contenido y cambiar la fuente.</p>
+                    <button type="button">Información estudiantil</button>
+                </article>
+                <article>
+                    <h2>Inscripción abierta</h2>
+                    <p>Párrafo. Haz clic aquí para agregar tu propio texto y editar. Es fácil. Haz clic en "Editar texto" o doble clic aquí para agregar tu contenido y cambiar la fuente.</p>
+                    <button type="button">Inscribete hoy</button>
+                </article>
+                <article>[[[FOTO*]]]</article>
+            </div>
+        </section>
+        <section>
+            <h2>ÚLTIMAS NOTICIAS</h2>
+            <article>
+                <span>
+                    <p>30 nov 2022 1 min.</p>
+                    <h3>Aprendizaje efectivo en casa</h3>
+                    <div>
+                        <span>0</span>
+                        <span>12</span>
+                    </div>
+                </span>
+                <span>
+                    <p>30 nov 2022 2 min.</p>
+                    <h3>Conoce a tus maestros</h3>
+                    <div>
+                        <span>0</span>
+                        <span>8</span>
+                    </div>
+                </span>
+                <span>
+                    <p>30 nov 2022 2 min.</p>
+                    <h3>Nuevas medidas sanitarias</h3>
+                    <div>
+                        <span>0</span>
+                        <span>3</span>
+                    </div>
+                </span>
+            </article>
+            <button type="button">Todas las noticias</button>
+        </section>
+        <section>
+            <h2>VIDA Y CULTURA</h2>
+            <h3>Sigue a <span>#colegiocervantes</span> en Instagram</h3>
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </section>
+        <section>
+            <h2>SUSCRÍBETE A NUESTRO BOLETÍN</h2>
+            <p>Recibe las últimas noticias</p>
+            <div>
+                <label for="correo">Ingresa tu email aquí</label>
+                <input type="text" name="correo" id="">
+                <button type="button">Registrarse</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>Logo</div>
+        <section>
+            <h3>NAVEGACIÓN RÁPIDA</h3>
+            <ul>
+                <li>Acerca de</li>
+                <li>Academia</li>
+                <li>Noticias</li>
+                <li>Eventos</li>
+                <li>Alumnos</li>
+                <li>Padres</li>
+                <li>Admisiones</li>
+                <li>Contacto</li>
+            </ul>
+        </section>
+        <section>
+            <h3>CONÉCTATE</h3>
+            <ul>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+                <li>Youtube</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Contáctanos</h3>
+            <ul>
+                <li>Av. Fray A. Alcalde 10</li>
+                <li>44100 Guad., Jal., México</li>
+                <li>Tel: +52-1-33-12345678</li>
+                <li>info@misitio.com</li>
+            </ul>
+        </section>
+    </footer> -->
 </body>
 </html>
