se termino el diseño del menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="" class="icono iconos-youtube"></a>
             </article>
         </section>
-        <nav>
+        <nav class="encabezado-nav">
             <ul>
                 <li>Inicio</li>
                 <li>Acerca de</li>
